# bd-web-research-agents

./: .env.example  README.md  pyproject.toml
config/: watchlist.yaml
design/: movements-agent.md
reports/: 2026-05-26-demo-live.md  2026-05-26-demo.md  2026-05-26-personnel-v2.md  2026-05-26-personnel-v3.md  2026-05-26-personnel.md  2026-05-26.md
src/bright_research_agent/: __init__.py  agent.py  brightdata.py  movements.py  movements_render.py  schemas.py
