[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bright-research-agent"
version = "0.1.0"
description = "OpenAI Agents SDK web research agent using Bright Data APIs"
requires-python = ">=3.9"
dependencies = [
  "eval-type-backport>=0.2.0; python_version<'3.10'",
  "httpx>=0.27.0",
  "openai-agents>=0.4.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
